--- a/css/app.css
+++ b/css/app.css
@@ -18,14 +18,15 @@
   background-color: red;
 }
 
-.white {
-  background-color: white;
+.black {
+  background-color: #4c4c4c;
 }
 
 .piece {
   margin: 5px;
-  width: 40px;
-  height: 40px;
+  width: 40px; /*40*/
+  height: 40px; /*40*/
   display: inline-block;
   border-radius: 50%;
+  /*border: 2px solid gray;*/
 }
