--- a/css/app.css
+++ b/css/app.css
@@ -49,6 +49,19 @@
   height: 40px;
   display: inline-block;
   border-radius: 50%;
+  transition-duration: 1s;
+  transition-timing-function: linear;
+  position: relative;
+  top: 0px;
+  left: 0px;
+}
+
+.trans {
+  transition-duration: 2s;
+  transition-timing-function: linear;
+  position: relative;
+  top: 0px;
+  left: 0px;
 }
 
 .message {
